[package]
name = "fasttime"
version = "0.1.2"
edition = "2024"
description = "Small UTC date/time library based on Ben Joffe's fast 64-bit date algorithm"
license = "Apache-2.0"
repository = "https://github.com/RustedBytes/fasttime"
readme = "README.md"
keywords = ["date", "time", "datetime", "unix", "calendar"]
categories = ["date-and-time"]
documentation = "https://docs.rs/fasttime"

[features]
# std is on by default; turn it off for no_std environments.
default = ["std"]
std = []
