[package]
name = "fasttime"
version = "0.1.6"
edition = "2021"
description = "Small UTC date/time library based on Ben Joffe's fast 64-bit date algorithm"
license = "Apache-2.0"
repository = "https://github.com/RustedBytes/fasttime"
readme = "README.md"
keywords = ["date", "time", "datetime", "unix", "calendar"]
categories = ["date-and-time"]
documentation = "https://docs.rs/fasttime"

[lib]
name = "fasttime"
crate-type = ["rlib", "cdylib"]

[features]
# std is on by default; turn it off for no_std environments.
default = ["std"]
std = []
python = ["pyo3"]

[dependencies]
pyo3 = { version = "0.22", optional = true }

[dev-dependencies]
criterion = "0.8"
time = "0.3"

[[bench]]
name = "unix_timestamp"
harness = false
